fix badges wrapping

--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -74,6 +74,10 @@
   height: 68px;
 }
 
+.badge {
+  white-space: nowrap;
+}
+
 input[type='color'] {
   width: 25px;
   height: 25px;
